# DDP

./: .main.cc.swp  CMakeLists.txt  README.md  main.cc
Controller/: Controller.cc  Controller.hpp  DDP.cc  DDP.hpp  MPC.cc  MPC.hpp  QP.cc  QP.hpp
Controller/DDP/: ContactBuilder.hpp  CostBuilder.cc  CostBuilder.hpp  DDPSolver.cc  DDPSolver.hpp  ModelBuilder.cc  ModelBuilder.hpp
Kinematics/: F_Kinematics.cc
LegTrajectory/: BezierCurve.cc  BezierCurve.hpp  Trajectory.cc  Trajectory.hpp
Quadxml/: 3D_Quad.xml
State_Estimation/: ESKF.cc  ESKF.hpp  KF.cc  KF.hpp
robot/: Actuator.cc  Actuator.hpp  Body.cc  Body.hpp  Integrate.cc  Integrate.hpp  robot_parameter.cc  robot_parameter.hpp
urdf/: 3D_Quad.urdf
util/: control_ui.hpp  dataLogging.cc  dataLogging.hpp  filter.cc  filter.hpp  globals.cc  globals.hpp
